--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,23 +6,140 @@
   box-sizing: border-box;
 }
 
+ul {
+  list-style: none;
+}
+
 body {
-  padding: 0.5rem;
+  padding: 1.5rem;
   font-family: "Lato", sans-serif;
 }
 
-h1 {
-  margin-bottom: 0.3rem;
+// vars
+$text-primary: #bbbbbb;
+$text-secondary: #464646;
+$text-tertiary: #727272;
+$blue-primary: #577dde;
+$shadow: 0 15px 50px rgba(41, 33, 136, 0.13);
+$base-font-size: 1.5rem;
+
+// home page
+.home {
+  max-width: 600px;
+  margin: 0 auto;
 }
 
+// Search input
 .search-input {
-  font-size: 1.8rem;
-  border-radius: 3px;
-  border: 1px solid pink;
-  outline: none;
-  padding: 5px;
+  background-color: #fff;
+  border-radius: 15px;
+  border: none;
+  box-shadow: $shadow;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-size: $base-font-size;
+  margin-bottom: 2rem;
+
+  input {
+    border: none;
+    outline: none;
+    padding: 1.1rem 2.2rem;
+    border-radius: 15px;
+    color: $text-primary;
+    font-size: 1em;
+    width: 100%;
+    caret-color: $blue-primary;
+    &::placeholder {
+      color: $text-primary;
+    }
+    &:-ms-input-placeholder {
+      color: $text-primary;
+    }
+    &::-ms-input-placeholder {
+      color: $text-primary;
+    }
+  }
+
+  svg {
+    width: 1.2em;
+    height: 1.2em;
+    cursor: pointer;
+    margin-right: 2.2rem;
+    fill: $blue-primary;
+    &:hover {
+      fill: $text-primary;
+    }
+  }
 }
 
-.result-box {
-  padding: 1rem;
+// search results
+.search-results {
+  background-color: #fff;
+  border-radius: 15px;
+  border: none;
+  padding: 2rem 2.2rem;
+  box-shadow: $shadow;
+  font-size: $base-font-size;
+
+  .categories {
+    display: flex;
+    color: $text-primary;
+
+    li {
+      margin-right: 0.9em;
+
+      &.selected {
+        color: $blue-primary;
+        position: relative;
+
+        &:after {
+          content: "";
+          position: absolute;
+          left: 0;
+          bottom: -7px;
+          height: 4px;
+          border-radius: 5px;
+          background-color: $blue-primary;
+          width: 100%;
+        }
+      }
+
+      &:hover {
+        color: $blue-primary;
+        cursor: pointer;
+        transition: ease-in color 0.13s;
+      }
+    }
+  }
+
+  .results {
+    li {
+      padding: 2rem 0 1rem 0;
+      border-bottom: 1px solid $text-primary;
+      color: $text-secondary;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      h2 {
+        font-size: 1em;
+      }
+
+      span {
+        font-size: 0.7em;
+        color: $text-tertiary;
+      }
+
+      svg {
+        height: 1.2em;
+        width: 1.2em;
+        fill: $blue-primary;
+        &:hover {
+          fill: $text-primary;
+          cursor: pointer;
+        }
+      }
+    }
+  }
 }
