--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,13 +15,26 @@ body {
   font-family: "Lato", sans-serif;
 }
 
+// mixins
+@mixin flex-row {
+  display: flex;
+  align-items: center;
+}
+
 // vars
 $text-primary: #bbbbbb;
-$text-secondary: #464646;
+$text-secondary: #636363;
 $text-tertiary: #727272;
 $blue-primary: #577dde;
 $shadow: 0 15px 50px rgba(41, 33, 136, 0.13);
 $base-font-size: 1.5rem;
+
+.caption {
+  font-size: 1.2rem;
+  color: $text-primary;
+  text-align: center;
+  margin-bottom: 2rem;
+}
 
 // home page
 .home {
@@ -31,12 +44,11 @@ $base-font-size: 1.5rem;
 
 // Search input
 .search-input {
+  @include flex-row;
   background-color: #fff;
   border-radius: 15px;
-  border: none;
+  border: 2px solid rgb(50, 50, 50);
   box-shadow: $shadow;
-  display: flex;
-  align-items: center;
   justify-content: space-between;
   font-size: $base-font-size;
   margin-bottom: 2rem;
@@ -77,7 +89,7 @@ $base-font-size: 1.5rem;
 .search-results {
   background-color: #fff;
   border-radius: 15px;
-  border: none;
+  border: 2px solid rgb(50, 50, 50);
   padding: 2rem 2.2rem;
   box-shadow: $shadow;
   font-size: $base-font-size;
@@ -113,14 +125,14 @@ $base-font-size: 1.5rem;
     }
   }
 
+  // results grid
   .results {
     li {
+      @include flex-row;
+      justify-content: space-between;
       padding: 2rem 0 1rem 0;
       border-bottom: 1px solid $text-primary;
       color: $text-secondary;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
 
       h2 {
         font-size: 1em;
@@ -145,15 +157,13 @@ $base-font-size: 1.5rem;
 }
 
 .footer-link {
-  display: flex;
-  align-items: center;
+  @include flex-row;
   justify-content: center;
   text-decoration: none;
   color: #ccc;
   position: fixed;
   bottom: 0;
   left: 0;
-  right: 0;
   margin: 15px;
 
   span {
